b5287626fe86319a25e1182ddddf8adf17ed7096 Fix: Scrollbar was showing on tables which had a border on the table
DD-2037

36591be22ae7f6de1e7af9de6a7bf180906ffed7 Merge branch 'master' of github.com:DataTables/DataTablesSrc

Sync to source repo @36591be22ae7f6de1e7af9de6a7bf180906ffed7

--- a/css/dataTables.jqueryui.css
+++ b/css/dataTables.jqueryui.css
@@ -321,7 +321,6 @@ table.dataTable.compact tbody td {
   padding: 4px;
 }
 
-table.dataTable,
 table.dataTable th,
 table.dataTable td {
   box-sizing: content-box;
